cmake_minimum_required(VERSION 3.23)
project(opengl-tutorial)

add_subdirectory("YoutubeOpenGL 0 - Install")
add_subdirectory("YoutubeOpenGL 1 - Create Window")
add_subdirectory("YoutubeOpenGL 2 - Triangle")
add_subdirectory("YoutubeOpenGL 3 - Indices")
add_subdirectory("YoutubeOpenGL 4 - Organizing")
add_subdirectory("YoutubeOpenGL 5 - Shaders")
add_subdirectory("YoutubeOpenGL 6 - Textures")
add_subdirectory("YoutubeOpenGL 7 - Going 3D")
add_subdirectory("YoutubeOpenGL 8 - Camera")
add_subdirectory("YoutubeOpenGL 9 - Lighting")
add_subdirectory("YoutubeOpenGL 10 - Specular Maps")
add_subdirectory("YoutubeOpenGL 11 - Types of Light")
add_subdirectory("YoutubeOpenGL 12 - Mesh Class")
add_subdirectory("YoutubeOpenGL 13 - Model Loading")
add_subdirectory("YoutubeOpenGL 14 - Depth Buffer")
add_subdirectory("YoutubeOpenGL 15 - Stencil Buffer")
add_subdirectory("YoutubeOpenGL 16 - Face Culling & FPS Counter")
add_subdirectory("YoutubeOpenGL 17 - Transparency & Blending")
add_subdirectory("YoutubeOpenGL 18 - Framebuffer & Post-processing")
add_subdirectory("YoutubeOpenGL 19 - Cubemaps & Skyboxes")
add_subdirectory("YoutubeOpenGL 20 - Geometry Shader")
add_subdirectory("YoutubeOpenGL 21 - Instancing (starting code)")
add_subdirectory("YoutubeOpenGL 21 - Instancing")
add_subdirectory("YoutubeOpenGL 22 - Anti-Aliasing")
add_subdirectory("YoutubeOpenGL 23 - Blinn-Phong Lighting")
add_subdirectory("YoutubeOpenGL 24 - Gamma Correction")
add_subdirectory("YoutubeOpenGL 25 - Shadow Maps (Directional Lights)")
add_subdirectory("YoutubeOpenGL 26 - Shadow Maps (Spotlights & Point Lights)")
add_subdirectory("YoutubeOpenGL 27 - Normal Maps")
add_subdirectory("YoutubeOpenGL 28 - Parallax Occlusion Mapping")
add_subdirectory("YoutubeOpenGL 29 - HDR")
add_subdirectory("YoutubeOpenGL 30 - Bloom")

add_subdirectory("ImGUI GLFW Tutorial")
add_subdirectory("Compute Shaders")
add_subdirectory("Tessellation Shaders")

add_subdirectory("Direct State Access (DSA)/DSA")
add_subdirectory("Direct State Access (DSA)/non-DSA")

